<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Migracja tabeli kategorii sprzętu - hierarchiczna struktura.
     */
    public function up(): void
    {
        Schema::create('kategorie', function (Blueprint $table) {
            $table->id();
            $table->string('nazwa', 100);
            $table->string('slug', 100)->unique();
            $table->foreignId('rodzic_id')->nullable()->constrained('kategorie')->nullOnDelete();
            
            $table->index('rodzic_id');
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('kategorie');
    }
};
